Ensure that too-wide messages don't overflow in small breakpoint

--- a/Signal/stylesheets/manifest.css
+++ b/Signal/stylesheets/manifest.css
@@ -5331,6 +5331,9 @@ body.dark-theme {
 .module-message__buttons__reply {
   display: none; }
 
+.module-message {
+  max-width: 300px; }
+
 /* Spec: container > 438px and container < 593px*/
 @media (min-width: 800px) and (max-width: 925px) {
   .module-message {
